<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_blog"
            android:checked="true"
            android:icon="@drawable/ic_mail"
            android:title="@string/blog" />
        <item
            android:id="@+id/nav_gp"
            android:icon="@drawable/ic_attach_money"
            android:title="@string/gp_overview" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app"
            android:title="@string/logout" />
    </group>

    <item android:title="@string/my_servers">
        <menu></menu>
    </item>

    <item android:title="@string/communication">
        <menu>
            <item
                android:id="@+id/nav_share_us"
                android:icon="@drawable/ic_share"
                android:title="@string/share_us" />
            <item
                android:id="@+id/nav_bug_report"
                android:icon="@drawable/ic_report_problem"
                android:title="@string/report_bugs" />
        </menu>
    </item>
</menu>